<resources>
    <string name="app_name">CMS_Android</string>

    <string name="login">로그인</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>

    <string name="success_login">로그인에 성공했습니다.</string>
    <string name="fail_login">로그인에 실패했습니다.</string>
    <string name="check_id_pw">아이디 또는 비밀번호를 입력해주세요.</string>
    <string name="club_main">동아리 메인</string>
    <string name="recruitment">모집공고</string>
    <string name="transfer_market">이적시장</string>
    <string name="notice">공지사항</string>

    <string name="logout">로그아웃</string>
    <string name="scout">스카우트</string>

    <string name="fail_exception_forbidden">권한이 없습니다.</string>
    <string name="fail_exception_internal">네트워크를 확인해주세요.</string>
    <string name="fail_exception_notfound">정보를 찾을 수 없습니다.</string>

    <string name="success_scout">스카우트 제의에 성공했습니다.</string>
    <string name="club_member">동아리 인원</string>
    <string name="post">게시판</string>

    <string name="club_member">동아리 인원</string>
    <string name="post">게시판</string>

    <string name="apply_club">동아리 지원</string>
    <string name="my_club">내 동아리</string>
    <string name="not_my_club">타 동아리</string>
    <string name="success_apply">지원에 성공했습니다.</string>

</resources>