<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/nav_main_fragment"
        android:icon="@drawable/ic_home"
        android:title="@string/club_main" />
    <item
        android:id="@id/nav_announcement_fragment"
        android:icon="@drawable/ic_person"
        android:title="@string/recruitment" />
    <item
        android:id="@id/nav_market_fragment"
        android:icon="@drawable/ic_change"
        android:title="@string/transfer_market" />
    <item
        android:id="@id/nav_notice_fragment"
        android:icon="@drawable/ic_noti"
        android:title="@string/notice" />

    <group>
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_lock"
            android:title="@string/logout" />
    </group>
</menu>